Button Regista-te e nome

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="pt">
     <head>
         <meta charset="utf-8">
-        <title> Formularios de Registo </title>
+        <title> Formulario de Registo </title>
     </head>
     <body>
-
+        <h1>Regista-te</h1>
+        <h2> É rápido e fácil</h2>
+        <form method="post" action="index.html">
+            <div>
+                <input type="text" name="Fisrt_Name" placeholder="Nome Próprio" aria-label="Nome Próprio" required>
+                <input type="text" name="last_Name" placeholder="Apelido" aria-label="Apelido" required>
+            </div>
+            <div>
+                <button type="submit" name="send">Regista-te</button>
+            </div>
+        </form>
     </body>
 <html>
