Implementado Campos de palavra passe e email + estilizacao

--- a/index.html
+++ b/index.html
@@ -9,14 +9,26 @@
         <main>
             <h1>Regista-te</h1>
             <h2> É rápido e fácil</h2>
+
             <form method="post" action="index.html">
-                <div class="form-submit">
+
+                <div class="double-input">
                     <input type="text" name="Fisrt_Name" placeholder="Nome Próprio" aria-label="Nome Próprio" required>
                     <input type="text" name="last_Name" placeholder="Apelido" aria-label="Apelido" required>
                 </div>
-                <div>
+
+                <div class="large-input">
+                    <input type="text" name="email_phone" placeholder="Número de telefone ou de email" aria-label="Número de telefone ou de email" required>
+                </div>
+
+                <div class="large-input">
+                    <input type="password" name="Password" placeholder="Nova Palavra Passe" aria-label="Nova Palavra Passe" required>
+                </div>
+
+                <div class="form-submit">
                     <button type="submit" name="send">Regista-te</button>
                 </div>
+
             </form>
         </main>
     </body>
