--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     </head>
     <body>
         <main>
+            <div>
+                <img src="logo.svg" alt="Logo do Facebook">
+            </div>
+
+
+
             <h1>Regista-te</h1>
             <h2> É rápido e fácil</h2>
 
