Input of Gender Selection

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <body>
         <main>
             <div>
-                <img src="logo.svg" alt="Logo do Facebook">
+                <img class="logo" src="logo.svg" alt="Logo do Facebook">
             </div>
-
-
 
             <h1>Regista-te</h1>
             <h2> É rápido e fácil</h2>
@@ -56,6 +54,24 @@
                         <select name="birth-year" aria-label="Ano">
                         </select>
 
+                    </fieldset>
+                </div>
+
+                <div class="gender-selection">
+                    <fieldset>
+                        <legend>Género</legend>
+                        <label>
+                            Feminino
+                            <input type="radio" name="gender" value="F" required> 
+                        </label>
+                        <label>
+                            Masculino
+                            <input type="radio" name="gender" value="M" required> 
+                        </label>
+                        <label>
+                            Persolanizar
+                            <input type="radio" name="gender" value="P" required> 
+                        </label>
                     </fieldset>
                 </div>
 
