Implementacao de estilizacao sobre genero e pronomes

--- a/index.html
+++ b/index.html
@@ -73,6 +73,23 @@
                             <input type="radio" name="gender" value="P" required> 
                         </label>
                     </fieldset>
+
+                    <div>
+                        <select name="pronoun">
+                            <option value="" disabled selected >Seleciona o teu pronome</option>
+                            <option value="1">Ela</option>
+                            <option value="2">Ele</option>
+                            <option value="6">Neutros</option>
+                        </select>
+                    </div>
+
+                    <p>
+                        O teu pronome é visivel para todas as pessoas.
+                    </p>
+                    <div class="large-input">
+                        <input type="" name="custom_gender" placeholder="Género (Opcional)" aria-label="Género Personalizado">
+                    </div>
+
                 </div>
 
                 <div class="form-submit">
