Finalizado Funcionalidade de Pronomes com JSS

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 </div>
 
                 <div class="gender-selection">
+
                     <fieldset>
                         <legend>Género</legend>
                         <label>
@@ -74,20 +75,23 @@
                         </label>
                     </fieldset>
 
-                    <div>
-                        <select name="pronoun">
-                            <option value="" disabled selected >Seleciona o teu pronome</option>
-                            <option value="1">Ela</option>
-                            <option value="2">Ele</option>
-                            <option value="6">Neutros</option>
-                        </select>
-                    </div>
 
-                    <p>
-                        O teu pronome é visivel para todas as pessoas.
-                    </p>
-                    <div class="large-input">
-                        <input type="" name="custom_gender" placeholder="Género (Opcional)" aria-label="Género Personalizado">
+                    <div id="gender-addon" class="hide">
+                        <div>
+                            <select name="pronoun">
+                                <option value="" disabled selected >Seleciona o teu pronome</option>
+                                <option value="1">Ela</option>
+                                <option value="2">Ele</option>
+                                <option value="6">Neutros</option>
+                            </select>
+                        </div>
+
+                        <p>
+                            O teu pronome é visivel para todas as pessoas.
+                        </p>
+                        <div class="large-input">
+                            <input type="" name="custom_gender" placeholder="Género (Opcional)" aria-label="Género Personalizado">
+                        </div>
                     </div>
 
                 </div>
